Blender from buildbot crash when Separate selection in this particular scene #48614

Closed
opened 2016-06-08 16:11:15 +02:00 by YAFU · 7 comments

System Information
Kubuntu Linux 14.04 64bits , GTX 960

Blender Version
Broken: buildbot 2.77.1 438bdcc
Worked: 2.77a

Short description of error
In this scene:
pen_1.blend
blender crash when trying to separate the selected vertices (perhaps due to the doubles?). The problem does not occur with stable versions of Blender.

Exact steps for others to reproduce the error
Open shared scene, P > Selection

**System Information** Kubuntu Linux 14.04 64bits , GTX 960 **Blender Version** Broken: buildbot 2.77.1 438bdcc Worked: 2.77a **Short description of error** In this scene: [pen_1.blend](https://archive.blender.org/developer/F316452/pen_1.blend) blender crash when trying to separate the selected vertices (perhaps due to the doubles?). The problem does not occur with stable versions of Blender. **Exact steps for others to reproduce the error** Open shared scene, P > Selection
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @YAFU

Added subscriber: @YAFU

Added subscriber: @mont29

Added subscriber: @mont29

Looks like separate generates bad data here (edges with MAW_UINT vindex, same for loops it seems…), @cambellbarton, want to investigate?

Looks like separate generates bad data here (edges with MAW_UINT vindex, same for loops it seems…), @cambellbarton, want to investigate?

Regression from 2c5dc66d5e, investigating further…

Regression from 2c5dc66d5e, investigating further…

This issue was referenced by d733826708

This issue was referenced by d733826708f9b562687b78424e5c0835cba8c3c9
Bastien Montagne self-assigned this 2016-06-09 17:55:47 +02:00

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48614
No description provided.