Fix T48614: Blender from buildbot crash when Separate selection in this particular scene.

Regression from recent rB2c5dc66d5effd4072f438afb, if last item of last chunk of a mempool was valid,
it would not be returned by mempool iterator step, which would always return NULL in that case.